--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -141,6 +141,163 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tbody name="game" style="font-size: medium;">
         <tr>
+            <th rowspan="5" colspan="1">2025年<br>03月23日(日)</th>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/atCaTepGRNE" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="井上">井上</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/gjSxhPBDQkk" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="大隅">大隅</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="近藤">近藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/ufpSVsNvTAs" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="大隅">大隅</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="黒澤">黒澤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/Vp_muffXQgQ" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="内村">内村</th>
+            <th colspan="3">【中断】</th>
+            <th class="井上">井上</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/MAUEjz2R4XU" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2025年<br>03月20日(木)<br><font
+                    color="red">春分の日</font></th>
+            <th class="内村">内村</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="黒澤">黒澤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/9iFly_mMvTY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="黒澤">黒澤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/xNN2xr34BxY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="黒澤">黒澤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/ScTZtjmwM5c" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/oitt5iQmUyI" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="5" colspan="1">2025年<br>03月09日(日)</th>
+            <th class="和田">和田</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="折原">折原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/a4SrdplXRxA" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="伊能">伊能</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="折原">折原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/jC3AfoHtKto" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="伊能">伊能</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="折原">折原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/SBfQTwr6cNY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="大久保【可】">大久保【可】</th>
+            <th class="伊能">伊能</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="黒澤">黒澤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/FBEeDkiLVXw" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="伊能">伊能</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/Rs18BopROBk" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
             <th rowspan="5" colspan="1">2025年<br>03月02日(日)</th>
             <th class="小川">小川</th>
             <th class="大久保【可】">大久保【可】</th>
