--- a/band/kazo/sound_resources.html
+++ b/band/kazo/sound_resources.html
@@ -18,6 +18,173 @@
             <th style="width: 30%;">タイトル</th>
             <th style="width: 10%;">リンク</th>
         </tr>
+        <!-- ■■ 2025年05月17日（土）2D ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="9">2025年06月28日（土）</td>
+            <td style="text-align:center" rowspan="9">MUSE-GYM（加須）</td>
+            <td style="text-align:center">0103</td>
+            <td style="text-align:center" rowspan="8">2D</td>
+            <td>001_音出し（PINK PANTHER THEME）</td>
+            <td style="text-align:center"><a href="https://youtu.be/Bsch6518mD0" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0104</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/FWR53ErCJSw" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0105</td>
+            <td>003_音出し（Crude Pop）</td>
+            <td style="text-align:center"><a href="https://youtu.be/xlGQGOXleeI" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0106</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/kzuoHEqcljs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0107</td>
+            <td>005_音出し（Haushinka）</td>
+            <td style="text-align:center"><a href="https://youtu.be/05uZZXZQaKg" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0108</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/udO_GwUFqHM" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0109</td>
+            <td>007_音出し（ヒバリ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/733v-9SfQ5Q" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0110</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/c0CI8SmUc7A" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2025年06月28日（土）360 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center">0111</td>
+            <td style="text-align:center" >360</td>
+            <td>xxx_流しっぱなし</td>
+            <td style="text-align:center"><a href="https://youtu.be/UdAAh_MaXn0" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2025年05月17日（土）2D ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="22">2025年05月17日（土）</td>
+            <td style="text-align:center" rowspan="22">MUSE-GYM（加須）</td>
+            <td style="text-align:center">0081</td>
+            <td style="text-align:center" rowspan="21">2D</td>
+            <td>001_音出し（PINK PANTHER THEME）</td>
+            <td style="text-align:center"><a href="https://youtu.be/57I8C_IqLWo" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0082</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/LaUR0MfJQow" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0083</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/c3vYD1PUENQ" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0084</td>
+            <td>005_音出し（Haushinka）</td>
+            <td style="text-align:center"><a href="https://youtu.be/mQ8uytjPvRM" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0085</td>
+            <td>003_音出し（Crude Pop）</td>
+            <td style="text-align:center"><a href="https://youtu.be/_BW0Ya2OzLU" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0086</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/-ZFXCFvKJB4" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0087</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/vpfC13MDh8o" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0088</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/gsyg-3JCPUA" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0089</td>
+            <td>007_音出し（ヒバリ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/75Y3cyedw3g" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0090</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/LX5uhgABcfs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0091</td>
+            <td>001_音出し（PINK PANTHER THEME）</td>
+            <td style="text-align:center"><a href="https://youtu.be/rdYDKmKa9C4" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0092</td>
+            <td>001_音出し（PINK PANTHER THEME）</td>
+            <td style="text-align:center"><a href="https://youtu.be/FOJuXp1rIZg" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0093</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/OyGuimtHxnU" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0094</td>
+            <td>003_音出し（Crude Pop）</td>
+            <td style="text-align:center"><a href="https://youtu.be/t1qZ92mTqNE" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0095</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/bC7h3hoXUnM" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0096</td>
+            <td>005_音出し（Haushinka）</td>
+            <td style="text-align:center"><a href="https://youtu.be/g7ydRzcdJZ8" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0097</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/9PBJ_wfDepg" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0098</td>
+            <td>007_音出し（ヒバリ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/xTFkU-hkiY8" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0099</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/ES4QEkJyfPI" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0100</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/1Hz-NaSDxT4" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0101</td>
+            <td>007_音出し（ヒバリ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/_dxdthimnB4" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2025年03月22日（土）360 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center">0102</td>
+            <td style="text-align:center" >360</td>
+            <td>xxx_流しっぱなし</td>
+            <td style="text-align:center"><a href="https://youtu.be/uzHuBbPIzyc" target="_blank">動画</a></td>
+        </tr>
         <!-- ■■ 2025年03月22日（土）2D ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center" rowspan="40">2025年03月22日（土）</td>
