--- a/band/untitled/sound_resources.html
+++ b/band/untitled/sound_resources.html
@@ -19,6 +19,24 @@
             <th style="width: 10%;">リンク</th>
         </tr>
 
+        <!-- ■■ 2025年05月10日（土） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="1">2025年05月10日（土）</td>
+            <td style="text-align:center" rowspan="1">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0014</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_001</td>
+            <td style="text-align:center"><a href="https://youtu.be/AMc2ubGhVtU" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2025年03月29日（土） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="1">2025年03月29日（土）</td>
+            <td style="text-align:center" rowspan="1">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0013</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_001</td>
+            <td style="text-align:center"><a href="https://youtu.be/5runh93WqRU" target="_blank">動画</a></td>
+        </tr>
         <!-- ■■ 2024年11月22日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center" rowspan="2">2024年11月22日（金）</td>
