バンド自動入力追加

--- a/band/kazo/sound_resources.html
+++ b/band/kazo/sound_resources.html
@@ -18,7 +18,132 @@
             <th style="width: 30%;">タイトル</th>
             <th style="width: 10%;">リンク</th>
         </tr>
-        <!-- ■■ 2025年05月17日（土）2D ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+
+<!--        読み込みテキストフォーマット-->
+<!--        2025年07月20日（日）-->
+<!--        2d,0112,001_音出し（PINK PANTHER THEME）-->
+<!--        2d,0113,002_音出し（I'm Not In Love）-->
+<!--        2d,0114,003_音出し（Crude Pop）-->
+<!--        3d,0115,004_007_音出し（ヒバリ）-->
+<!--        3d,0116,xxx_流しっぱなし-->
+
+        <!-- ■■ 2025年07月20日（日）2D ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="22">2025年07月20日（日）</td>
+            <td style="text-align:center" rowspan="22">MUSE-GYM（加須）</td>
+            <td style="text-align:center">0112</td>
+            <td style="text-align:center" rowspan="21">2D</td>
+            <td>001_音出し（PINK PANTHER THEME）</td>
+            <td style="text-align:center"><a href="https://youtu.be/p2WNk1lml54" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0113</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/ZyjvE4Aa9kY" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0114</td>
+            <td>003_音出し（Crude Pop）</td>
+            <td style="text-align:center"><a href="https://youtu.be/25azwKbVKb4" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0115</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/pbDkSTelGkA" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0116</td>
+            <td>005_音出し（Haushinka）</td>
+            <td style="text-align:center"><a href="https://youtu.be/-qbOU-Yu2Hs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0117</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/GVCd-WxKcwI" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0118</td>
+            <td>007_音出し（ヒバリ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/_tIHXbDMBnU" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0119</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/ZKwhpa4qKC0" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0120</td>
+            <td>003_音出し（Crude Pop）</td>
+            <td style="text-align:center"><a href="https://youtu.be/opHVkilK8gs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0121</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/zEVHQWSCDPk" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0122</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/l_5le3gCNH4" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0123</td>
+            <td>001_音出し（PINK PANTHER THEME）</td>
+            <td style="text-align:center"><a href="https://youtu.be/55YgRjTziiE" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0124</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/tbvAyeRBM5Q" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0125</td>
+            <td>003_音出し（Crude Pop）</td>
+            <td style="text-align:center"><a href="https://youtu.be/g6jXwOQoHgQ" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0126</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/ylVJoV5euHk" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0127</td>
+            <td>005_音出し（Haushinka）</td>
+            <td style="text-align:center"><a href="https://youtu.be/4zXuYZB22fc" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0128</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/6ooQ_pMVSLY" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0129</td>
+            <td>007_音出し（ヒバリ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/T_ACjsYkPK4" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0130</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/Z43JhRwwtpE" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0131</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/4LxgpHn7qAA" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0132</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/knQRS6lN11E" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2025年07月20日（日）360 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center">0133</td>
+            <td style="text-align:center" >360</td>
+            <td>xxx_流しっぱなし</td>
+            <td style="text-align:center"><a href="https://youtu.be/iydvPMTsmt0" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2025年06月28日（土）2D ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center" rowspan="9">2025年06月28日（土）</td>
             <td style="text-align:center" rowspan="9">MUSE-GYM（加須）</td>
