--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -141,6 +141,150 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tbody name="game" style="font-size: medium;">
         <tr>
+            <th rowspan="4" colspan="1">2025年<br>07月13日(日)</th>
+            <th class="小川">小川</th>
+            <th class="佐々木">佐々木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="伊能">伊能</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/bMT519KgS7I" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="諏訪">諏訪</th>
+            <th class="近藤">近藤</th>
+            <th>？</th>
+            <th>vs</th>
+            <th>？</th>
+            <th class="桜井">桜井</th>
+            <th class="柏木">柏木</th>
+            <th><a href="https://youtu.be/ZINqLCixOn8" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/eq_Ct4AoFlw" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/rPvPnX2y0Qk" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2025年<br>07月12日(土)</th>
+            <th class="小川">小川</th>
+            <th class="柏木">柏木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="鵜沢">鵜沢</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/g8RPR3VzUB4" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="鵜沢">鵜沢</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/Z2XCxPaULPU" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="黒澤">黒澤</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="木村">木村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/SGBbRbJty5s" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="柏木">柏木</th>
+            <th class="近藤">近藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/vQSJZ2FdsAE" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2025年<br>07月06日(日)</th>
+            <th class="伊能">伊能</th>
+            <th class="柏木">柏木</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/XYwYP7gfFhM" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="黒澤">黒澤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="伊能">伊能</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/TnkTl-oU6dM" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="近藤">近藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="黒澤">黒澤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/X8eaGY2fS9s" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="1" colspan="1">2025年<br>07月05日(土)</th>
+            <th class="小川">小川</th>
+            <th class="内村">内村</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="伊能">伊能</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/H-nkg9unrSQ" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
             <th rowspan="3" colspan="1">2025年<br>06月29日(日)</th>
             <th class="和田">和田</th>
             <th class="折原">折原</th>
