--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -141,6 +141,42 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tbody name="game" style="font-size: medium;">
         <tr>
+            <th rowspan="3" colspan="1">2025年<br>07月27日(日)</th>
+            <th class="柏木">柏木</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/lWiTpCP7f5A" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/1rDI9v2NE74" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="須藤">須藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/1nf9J4Dd86Y" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
             <th rowspan="4" colspan="1">2025年<br>07月13日(日)</th>
             <th class="小川">小川</th>
             <th class="佐々木">佐々木</th>
@@ -4855,18 +4891,18 @@
         </tbody>
         <tbody name="game" style="font-size: medium;">
         <!--
-        <tr>
-            <th rowspan="6" colspan="1">2024年<br>01月14日(日)</th>
-            <th class="マルヤマ">マルヤマ</th>
-            <th class="オゼキ">オゼキ</th>
-            <th>×</th>
-            <th>vs</th>
-            <th>●</th>
-            <th class="青木">青木</th>
-            <th class="石井【友】">石井【友】</th>
-            <th><a href="https://youtu.be/7Pgk8tS4SHE" target="_blank">動画</a></th>
-        </tr>
-        -->
+                <tr>
+                    <th rowspan="6" colspan="1">2024年<br>01月14日(日)</th>
+                    <th class="マルヤマ">マルヤマ</th>
+                    <th class="オゼキ">オゼキ</th>
+                    <th>×</th>
+                    <th>vs</th>
+                    <th>●</th>
+                    <th class="青木">青木</th>
+                    <th class="石井【友】">石井【友】</th>
+                    <th><a href="https://youtu.be/7Pgk8tS4SHE" target="_blank">動画</a></th>
+                </tr>
+                -->
         <tr>
             <th rowspan="1" colspan="1">2024年<br>01月14日(日)</th>
             <th class="黒澤">黒澤</th>
