--- a/band/kazo/sound_resources.html
+++ b/band/kazo/sound_resources.html
@@ -29,6 +29,93 @@
 3d,0116,xxx_流しっぱなし
 -->
         // @formatter:on
+        <!-- ■■ 2025年08月31日（日）2d ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="16">2025年08月31日（日）</td>
+            <td style="text-align:center" rowspan="16">MUSE-GYM（加須）</td>
+            <td style="text-align:center">0133</td>
+            <td style="text-align:center" rowspan="8">2d</td>
+            <td>001_音出し（PINK PANTHER THEME）</td>
+            <td style="text-align:center"><a href="https://youtu.be/F9Px2fr4Wcs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0134</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/MzJjf7fLCfs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0135</td>
+            <td>003_音出し（Crude Pop）</td>
+            <td style="text-align:center"><a href="https://youtu.be/UpwV-RUWJV0" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0136</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/jyN0rFCFP3Q" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0137</td>
+            <td>005_音出し（Haushinka）</td>
+            <td style="text-align:center"><a href="https://youtu.be/txwM-2ocr6w" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0138</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/1MHZz7gF1uk" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0139</td>
+            <td>007_音出し（ヒバリ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/PbzIJ39-PUY" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0140</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/dX6LaZRo8bA" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2025年08月31日（日）3d ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center">0141</td>
+            <td style="text-align:center" rowspan="8">3d</td>
+            <td>001_音出し（PINK PANTHER THEME）</td>
+            <td style="text-align:center"><a href="https://youtu.be/I40Kj1HceEs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0142</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/NC5MiAGyU0s" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0143</td>
+            <td>003_音出し（Crude Pop）</td>
+            <td style="text-align:center"><a href="https://youtu.be/c9_EXxXA40c" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0144</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/Kv9DD_MJLfU" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0145</td>
+            <td>005_音出し（Haushinka）</td>
+            <td style="text-align:center"><a href="https://youtu.be/wKwpOf-xszU" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0146</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/SkujdUSesVY" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0147</td>
+            <td>007_音出し（ヒバリ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/yAkK_JQqcO8" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0148</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/lQ_Zm6zNDOk" target="_blank">動画</a></td>
+        </tr>
+
         <!-- ■■ 2025年07月20日（日）2D ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center" rowspan="22">2025年07月20日（日）</td>
