--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -141,6 +141,94 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tbody name="game" style="font-size: medium;">
         <tr>
+            <th rowspan="2" colspan="1">2025年<br>09月07日(日)</th>
+            <th class="柏木">柏木</th>
+            <th class="近藤">近藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="桜井">桜井</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/giLT71_pvvU" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="海老原">海老原</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/wKtv_lgIgfg" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2025年<br>08月03日(日)</th>
+            <th class="小川">小川</th>
+            <th class="柏木">柏木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/9oVbu2P1jF4" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="須藤">須藤</th>
+            <th class="柏木">柏木</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/kangTxb2d1g" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="2" colspan="1">2025年<br>08月02日(土)</th>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th></th>
+            <th>vs</th>
+            <th></th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/Q8iEgyJWEsU" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="柏木">柏木</th>
+            <th class="伊能">伊能</th>
+            <th></th>
+            <th>vs</th>
+            <th></th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/6igRP1hCF_A" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
             <th rowspan="3" colspan="1">2025年<br>07月27日(日)</th>
             <th class="柏木">柏木</th>
             <th class="須藤">須藤</th>
